# microconst

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
example/: README.md  main.py  pyproject.toml
example/bot/: __init__.py  callbacks.py  handlers.py  keyboards.py
microconst/: __init__.py  const.py  entry.py  factories.py  key.py  members.py  py.typed  types.py  utils.py
microconst.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_all.py
